apps/staging/linkding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-staging
  name: linkding
  namespace: linkding
spec:
  ingressClassName: traefik
  rules:
    - host: linkding.javiercastano.xyz
      http:
        paths:
          - backend:
              service:
                name: linkding
                port:
                  number: 9090
            path: /
            pathType: Prefix
  # tls:
  #   - hosts:
  #       - linkding-staging.javiercastano.xyz
  #     secretName: linkding-ingress-staging
